# ACCA_2024

./: .gitignore
lidar_localization_ros2-humble/: CMakeLists.txt
lidar_localization_ros2-humble/launch/: pcl_localization.launch.py
lidar_localization_ros2-humble/param/: localization.yaml
lidar_localization_ros2-humble/rviz/: localization.rviz
lidar_localization_ros2-humble/src/: pcl_localization_component.cpp
localization/: README.md  package.xml  setup.py
localization/launch/: gps_localization.launch.py  kalman_localization.launch.py  localization.launch.py  map_odom_tf_publisher2.launch.py  mapviz.launch.py  osm.launch.py  param_test.launch.py  real_time_map_server.launch.py  test.launch.py
localization/localization/: erp_twist.py  gps_localization.py  kalman_localization.py  map_odom_tf_publisher.py  map_server.py  osm.py  param_test.py  real_time_map_server.py  transformed_odom_publisher.py
localization/params/: gps_localization.yaml  kalman_localization.yaml  map_odom_tf_publisher.yaml  navsat_transform.yaml  osm.yaml  param_ekf.yaml  param_test.yaml  real_time_map_server.yaml
ros2_websocket_bridge/: package.xml  setup.cfg  setup.py
sensor/: 센서 드라이브 출처
sensor/erp42/erp42_control/: package.xml  setup.cfg  setup.py
sensor/erp42/erp42_control/erp42_control/: controller_2024 (another copy).py  controller_2024 (copy).py  controller_2024.py  controller_2024.tar.xz  controller_autoware.py  encoder_imu.py  path_opener.py  pid_tunning.py  stanley (another copy).py  stanley (copy).py  stanley.py  stanley.tar.xz
test_pkg/: package.xml  setup.py
(+73 files in other folders)
